[tool.poetry]
name = "knoepfe"
version = "0.1.1"
description = "Connect and control Elgato Stream Decks"
authors = ["Simon Hayessen <simon@lnqs.io>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/lnqs/knoepfe"
repository = "https://github.com/lnqs/knoepfe"

[tool.poetry.dependencies]
python = "^3.10"
schema = "^0.7.7"
appdirs = "^1.4.4"
docopt = "^0.6.2"
streamdeck = "^0.9.5"
Pillow = "^10.4.0"
aiorun = "^2024.8.1"
websockets = "^13.1"
pulsectl-asyncio = "^1.2.1"
pulsectl = "^24.8.0"

[tool.poetry.scripts]
knoepfe = 'knoepfe.__main__:main'

[tool.poetry.group.dev.dependencies]
attrs = "^24.2.0"
black = "^24.8.0"
cfgv = "^3.4.0"
click = "^8.1.7"
coverage = "^7.6.1"
distlib = "^0.3.8"
filelock = "^3.16.1"
flake8 = "^7.1.1"
flake8-bugbear = "^24.8.19"
identify = "^2.6.1"
iniconfig = "^2.0.0"
isort = "^5.13.2"
mccabe = "^0.7.0"
mypy = "^1.11.2"
mypy-extensions = "^1.0.0"
nodeenv = "^1.9.1"
packaging = "^24.1"
pathspec = "^0.12.1"
platformdirs = "^4.3.6"
pluggy = "^1.5.0"
pre-commit = "^3.8.0"
pycodestyle = "^2.12.1"
pyflakes = "^3.2.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
pyyaml = "^6.0.2"
tomli = "^2.0.1"
types-appdirs = "^1.4.3.5"
types-docopt = "^0.6.11.4"
types-pillow = "^10.2.0.20240822"
typing-extensions = "^4.12.2"
virtualenv = "^20.26.5"

[tool.isort]
profile = "black"
skip = ["simpleobsws.py"]

[tool.black]
exclude = "simpleobsws.py"

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning:pulsectl_asyncio"
addopts = "--cov=knoepfe --cov-report=term-missing --asyncio-mode=auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
